--- a/Root/public/mainpage.html
+++ b/Root/public/mainpage.html
@@ -14,11 +14,11 @@
     <div id="header">
         <div id="menu">
             <ul>
-                <li class="current_page_item"><a href="#">Main page</a></li>
+                <li class="current_page_item"><a href="mainpage.html">Main page</a></li>
                 <li><a href="posts.html">Posts</a></li>
                 <li><a href="authors.html">Authors</a></li>
                 <li><a href="#" class="last">Personal page</a></li>
-                <li class="login_page_item"><a href="#"> log in / check in </a></li>
+                <li class="login_page_item"><a href="login/loginpage.html"> log in / check in </a></li>
             </ul>
         </div>
         <!-- end #menu -->
