--- a/Root/public/login/loginpage.html
+++ b/Root/public/login/loginpage.html
@@ -59,7 +59,7 @@
     <!-- end #page -->
 </div>
 <div id="footer">
-    <p>Сайт, где пользователи могут делиться своим произведениями, читать других авторов и обсуждать посты в комментариях.
+    <p>Site, where users may share there posts, read other authors and comment posts.
         since 2021</p>
 </div>
 <!-- end #footer -->
